fix: align Community data downloads with canonical filters